--- a/manifest.json
+++ b/manifest.json
@@ -22,5 +22,5 @@
         "series"
     ],
     "name": "Ita TV",
-    "description": "Selected Italian TV live/on demand streams"
+    "description": "Selected Italian TV streams"
 }
