--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"axios": "^1.6.5",
 		"axios-rate-limit": "^1.3.0",
 		"cheerio": "^1.0.0-rc.12",
+		"mongodb": "^6.3.0",
 		"stremio-addon-sdk": "1.1.x",
 		"string-similarity": "^4.0.4"
 	}
