--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"cheerio": "^1.0.0-rc.12",
 		"mongodb": "^6.3.0",
 		"stremio-addon-sdk": "1.1.x",
-		"string-similarity": "^4.0.4"
+		"string-similarity": "^4.0.4",
+		"sync-request": "^6.1.0"
 	}
 }
