--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
 		"start": "node server.js"
 	},
 	"dependencies": {
-		"axios": "^1.6.5",
+		"axios": "^1.6.7",
+		"axios-cookiejar-support": "^5.0.0",
 		"axios-rate-limit": "^1.3.0",
 		"cheerio": "^1.0.0-rc.12",
 		"mongodb": "^6.3.0",
 		"stremio-addon-sdk": "1.1.x",
 		"string-similarity": "^4.0.4",
-		"sync-request": "^6.1.0"
+		"sync-request": "^6.1.0",
+		"tough-cookie": "^4.1.3"
 	}
 }
