--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"axios-cookiejar-support": "^5.0.0",
 		"axios-rate-limit": "^1.3.0",
 		"cheerio": "^1.0.0-rc.12",
+		"cli-progress": "^3.12.0",
 		"mongodb": "^6.3.0",
 		"stremio-addon-sdk": "1.1.x",
 		"string-similarity": "^4.0.4",
